--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.15",
+    "stripe": "^17.4.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
